<resources>
    <string name="app_name">ShoeStore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="shoes_image">Shoes image</string>
    <string name="choose_shoes_online"><![CDATA[Choose Shoes Online & Enjoy]]></string>
    <string name="welcome_description">You can find and view any pair of shoes from our countless
        number of super modern models</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="primary_text_on_instruction_screen">Choose any pair for you</string>
    <string name="secondary_text_on_instructions_screen">Scroll up and down to look through all available
        pairs of shoes. Tap any liked model to see its details.</string>
    <string name="shoes_shop_image">Shoes shop image</string>
    <string name="shoe_name">Shoe name</string>
    <string name="name">Name:</string>
    <string name="company">Company:</string>
    <string name="size">Size:</string>
    <string name="shoe_company">Shoe company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="details">Details</string>
    <string name="description">Description:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_details">Shoe Details</string>
</resources>
