<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@{shoe.company}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shoe_company" />

        <TextView
            android:id="@+id/text_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/text_company_label"
            app:layout_constraintTop_toBottomOf="@+id/text_company_label" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{shoe.name}"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/text_company"
            app:layout_constraintTop_toTopOf="@+id/text_name_label"
            tools:text="@string/shoe_name" />

        <TextView
            android:id="@+id/text_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="@+id/text_name_label"
            app:layout_constraintTop_toBottomOf="@+id/text_name_label" />

        <TextView
            android:id="@+id/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(shoe.size)}"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/text_name"
            app:layout_constraintTop_toTopOf="@+id/text_size_label"
            tools:text="@string/shoe_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:layout_marginTop="8dp"
            android:background="@color/line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_size_label" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="text_name_label,text_company_label,text_size_label"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="117dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>