<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ApplicationViewModel" />
    </data>

    <!-- LinearLayout is not convenient for this UI so I used ConstraintLayout.
         Two columns of views that's why ConstraintLayout is better.
         Otherwise I'd need nested linear layouts. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_label"
            android:text="@string/username"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_username"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_username"
            android:autofillHints="username"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/edit_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/InputStyle.Margins" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/edit_username"
            app:layout_constraintTop_toBottomOf="@+id/edit_username"
            tools:ignore="TextContrastCheck"
            style="@style/InputStyle" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_password"
            app:layout_constraintStart_toStartOf="@+id/text_username" />

        <Button
            android:id="@+id/button_login"
            android:onClick="@{() -> viewModel.onLogin()}"
            android:text="@string/login"
            app:layout_constraintEnd_toStartOf="@+id/button_signup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"
            style="@style/FirstButtonStyle" />

        <Button
            android:id="@+id/button_signup"
            android:onClick="@{() -> viewModel.onSignUp()}"
            android:text="@string/signup"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_login"
            style="@style/SecondButtonStyle" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="text_password,text_username"
            tools:layout_editor_absoluteY="326dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>