<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ApplicationViewModel" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- LinearLayout is not convenient for this UI so I used ConstraintLayout.
         Two columns of views that's why ConstraintLayout is better.
         Otherwise I'd need nested linear layouts. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_shoe_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_company_label_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:labelFor="@id/edit_company_on_details"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_name_label_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:labelFor="@id/edit_name_on_details"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/text_company_label_details"
            app:layout_constraintTop_toBottomOf="@+id/text_company_label_details" />

        <TextView
            android:id="@+id/text_size_label_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:labelFor="@id/edit_size_on_details"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="@+id/text_name_label_details"
            app:layout_constraintTop_toBottomOf="@+id/text_name_label_details" />

        <TextView
            android:id="@+id/text_description_label_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:labelFor="@id/edit_description_on_details"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/text_size_label_details"
            app:layout_constraintTop_toBottomOf="@+id/text_size_label_details" />

        <EditText
            android:id="@+id/edit_company_on_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoe.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_company_label_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier_on_details"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edit_name_on_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoe.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_name_label_details"
            app:layout_constraintEnd_toEndOf="@+id/edit_company_on_details"
            app:layout_constraintStart_toStartOf="@+id/edit_company_on_details"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edit_size_on_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={`` + shoe.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_size_label_details"
            app:layout_constraintEnd_toEndOf="@+id/edit_name_on_details"
            app:layout_constraintStart_toStartOf="@+id/edit_name_on_details"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edit_description_on_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="5"
            android:minLines="3"
            android:scrollbars="vertical"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description_label_details"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button_cancel_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@android:string/cancel"
            android:onClick="@{() -> viewModel.onCancel()}"
            app:layout_constraintEnd_toStartOf="@+id/button_save_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_description_on_details" />

        <Button
            android:id="@+id/button_save_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/save"
            android:onClick="@{() -> viewModel.onSave(shoe)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_cancel_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_cancel_details" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_on_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="text_company_label_details,text_size_label_details,text_name_label_details,text_description_label_details"
            tools:layout_editor_absoluteX="411dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>